--- a/Gruppprojekt-Grupp2/src/global.css
+++ b/Gruppprojekt-Grupp2/src/global.css
@@ -1,7 +1,5 @@
 * {
     margin: 0;
     padding: 0;
-
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: 'DM Serif Display', serif;
 }
