--- a/Gruppprojekt-Grupp2/src/navbar.css
+++ b/Gruppprojekt-Grupp2/src/navbar.css
@@ -3,7 +3,7 @@
 }
 
 .nav {
-    background-color: #eeeeff;
+    background-color: white;
     color: #1E1D20;
     display: flex;
     justify-content: space-between;
