--- a/Gruppprojekt-Grupp2/src/footer.css
+++ b/Gruppprojekt-Grupp2/src/footer.css
@@ -1,4 +1,40 @@
+* {
+    box-sizing: border-box;
+}
+
 .footer {
     position: relative;
-    background-color: rgb(224, 224, 224);
+    background-color: white;
+    color: #1E1D20;
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    padding: 0 1rem;
+    height: 5rem;
+}
+
+.footer ul {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .4rem;
+    font-family: 'DM Serif Display', serif;
+}
+
+.footer li.active {
+    background-color: #d2dae2;
+}
+
+
+.footer li:hover {
+    background-color: #7f93a6;
+    transition: 0.2s;
 }
