--- a/Gruppprojekt-Grupp2/src/footer.css
+++ b/Gruppprojekt-Grupp2/src/footer.css
@@ -3,38 +3,51 @@
 }
 
 .footer {
-    position: relative;
-    background-color: white;
-    color: #1E1D20;
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-    padding: 0 1rem;
-    height: 5rem;
-}
-
-.footer ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
+    padding: 3rem 0;
 }
 
 .footer a {
-    color: inherit;
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: .4rem;
     font-family: 'DM Serif Display', serif;
+    color: #1E1D20;
 }
 
-.footer li.active {
-    background-color: #d2dae2;
+.socials {
+    text-align: center;
+    padding-bottom: .33rem;
+}
+
+.socials a {
+    font-size: 1.5rem;
+    margin: 0 .33rem;
+}
+
+.footer ul {
+    text-align: center;
+   
+}
+
+.list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style: none;
+}
+
+.list a {
+    text-decoration: none;
+    margin: 0 1rem;
+}
+
+.copyright {
+    display: none
+}
+
+.footer a.active {
+    background-color: red;
 }
 
 
-.footer li:hover {
-    background-color: #7f93a6;
+.footer a:hover {
+    color: red;
     transition: 0.2s;
 }
