--- a/Gruppprojekt-Grupp2/src/footer.css
+++ b/Gruppprojekt-Grupp2/src/footer.css
@@ -43,11 +43,11 @@
 }
 
 .footer a.active {
-    background-color: red;
+    background-color: #9c96a8;
 }
 
 
 .footer a:hover {
-    color: red;
+    color: #9c96a8;
     transition: 0.2s;
 }
