--- a/Gruppprojekt-Grupp2/src/cart.css
+++ b/Gruppprojekt-Grupp2/src/cart.css
@@ -3,8 +3,12 @@
     margin-top: 15px;
     height: 90px;
     width: 90px;
-    /*background-color: green;*/
+
     color: white;
+}
+
+.button:hover{
+    background-color: green;
 }
 
 .value_button{
@@ -38,6 +42,7 @@
     margin: .2rem 0;
     cursor: pointer;
     background-color: #f0f0f0;
+    border-color: aqua;
 
    
 
