--- a/Gruppprojekt-Grupp2/src/cart.css
+++ b/Gruppprojekt-Grupp2/src/cart.css
@@ -12,13 +12,13 @@
 }
 
 .value_button{
-
-
+    margin-left: 20px;
+    margin-right: 20px;
     height: 30px;
     width: 60px;
     background-color: lightgreen;
-
     text-align: center;
+    border-radius: .33rem;
 }
 
 .plus_minus_button{
@@ -31,7 +31,7 @@
 .quantitys_left{
     height: 30px;
     width: 50px;
-    background-color: yellow;
+    background-color: lightgray;
     margin-left: 10px;
 }
 
@@ -41,19 +41,12 @@
     padding: 0.2em;
     margin: .2rem 0;
     cursor: pointer;
-    background-color: #f0f0f0;
-    border-color: aqua;
-
-   
 
 }
 
 .productbutton:hover {
     background-color: #dddddd;
     transition: .2s;
+
 }
 
-.buttonActive {
-    background-color: black;
-    color: white;
-}
