--- a/Gruppprojekt-Grupp2/src/LoginAndRegisterForm.css
+++ b/Gruppprojekt-Grupp2/src/LoginAndRegisterForm.css
@@ -6,7 +6,6 @@
     margin: 1rem 2rem 2rem 2rem;
     background-image: linear-gradient(90deg, #F0F0F0, #c9d0d4 100%);
     padding: 1rem;
-
 }
 
 h2 {
@@ -30,7 +29,7 @@ input {
     border-radius: .33rem;
 }
 
-button {
+.log-button {
     border: none;
     background-color: white;
     padding: .33rem;
@@ -39,18 +38,21 @@ button {
     margin-top: .5rem;
 }
 
-.link-button {
-    background: none;
-    text-decoration: underline;
-}
-
-.button:hover {
+.log-button:hover {
     background-color: #000000;
     color: white;
     transition: 0.1s;
 }
 
+.link-button {
+    margin-top: .5rem;
+    background: none;
+    text-decoration: underline;
+    border: none;
+}
+
 .link-button:hover {
-    color: #3b3b3b;
+    color: #2f1c71;
     transition: 0.1s;
+    cursor: pointer;
 }
