--- a/Gruppprojekt-Grupp2/src/footer.css
+++ b/Gruppprojekt-Grupp2/src/footer.css
@@ -6,7 +6,11 @@
     border-top: 1px solid #333333;
     bottom: 0;
     margin-top: 2rem;
-    padding: 3rem 0;
+    padding: 1rem 0;
+    position: fixed;
+    background: white;
+    width: 100%;
+
 }
 
 .footer a {
