--- a/Gruppprojekt-Grupp2/src/categoryPicker.css
+++ b/Gruppprojekt-Grupp2/src/categoryPicker.css
@@ -5,9 +5,13 @@
     background-color: white;
     border-radius: .33rem;
     padding: 1em;
-    margin: 2rem 0 0 3rem;
+    margin: 2rem 0 0 3vw;
+    transition: all 0.4s;
+    
     cursor: pointer;
 }
+
+
 
 .categoryButton:hover {
     background-color: #f0f0f0;
@@ -27,3 +31,9 @@
 }
 
 
+@media only screen and (max-width: 600px) {
+    .categoryButton {
+        font-size: 3vw;
+        transition: all 0.4s;
+    }
+}
