--- a/Gruppprojekt-Grupp2/src/filter.css
+++ b/Gruppprojekt-Grupp2/src/filter.css
@@ -1,4 +1,5 @@
 .filterButton {
+    display: flex;
     border: none;
     border-radius: .33rem;
     padding: 0.2em;
@@ -7,6 +8,8 @@
     background-color: #f0f0f0;
     color: black;
     text-decoration: none;
+
+    
     
 }
 .filterButton:hover {
@@ -18,4 +21,4 @@
     background-color: black;
     color: white;
 }
-    
+
