--- a/Gruppprojekt-Grupp2/src/cart.css
+++ b/Gruppprojekt-Grupp2/src/cart.css
@@ -14,6 +14,7 @@ h2 {
     border: none;
     border-radius: 1rem;
     cursor: pointer;
+    margin-bottom: 1rem;
 }
 
 .continue-shopping-button:hover {
